[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullhound"
version = "1.0.0"
description = "Terminal-only Linux vulnerability scanner and security configuration auditor"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jai Roy (Hercules)", email = "Jairoy2426@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.scripts]
nullhound = "nullhound:main"

[tool.setuptools]
packages = ["core", "modules"]
py-modules = ["nullhound"]
